# cGA

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  fabricate.py  fitness.py  requirements.txt
.devcontainer/: devcontainer.json
examples/julia/: main.jl
examples/python/: fitness.py  main.py
julia_wrapper/: algorithm_wrapper.jl
python_wrapper/: __init__.py  algorithm_wrapper.pyx  setup.py
src/: cGA.c
